# scsv

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  conanfile.py
cmake/: conan.cmake  warnings.cmake
include/scsv/: missized_row_exception.hpp  options.hpp  parse.hpp  parse_file.hpp
include/scsv/detail/: cast_and_assign.hpp  delimiter.hpp  for_range.hpp  get_line.hpp  mmap_reading.hpp  skip_header.hpp  skip_trailing_caret_return.hpp  split.hpp
tests/: Benchmark.cpp  CMakeLists.txt  IntegrationTest.cpp  Test.cpp
